WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199418
Protect NetworkProcess::m_networkSessions against corruption
https://bugs.webkit.org/show_bug.cgi?id=199418
Summary
Protect NetworkProcess::m_networkSessions against corruption
Chris Dumez
Reported
2019-07-02 12:46:00 PDT
Protect NetworkProcess::m_networkSessions against corruption.
Attachments
Patch
(17.96 KB, patch)
2019-07-02 12:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(40.65 KB, patch)
2019-07-02 13:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-07-02 12:46:37 PDT
<
rdar://problem/50614019
>
Chris Dumez
Comment 2
2019-07-02 12:53:03 PDT
Created
attachment 373353
[details]
Patch
Chris Dumez
Comment 3
2019-07-02 13:50:07 PDT
Created
attachment 373357
[details]
Patch
Chris Dumez
Comment 4
2019-07-02 13:52:54 PDT
Committed
r247072
: <
https://trac.webkit.org/changeset/247072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug