Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp
@@ -213,7 +213,7 @@ void NetworkResourceLoader::retrieveCacheEntry(const ResourceRequest& request)
     RefPtr<NetworkResourceLoader> loader(this);
     if (isMainFrameLoad()) {
         ASSERT(m_parameters.options.mode == FetchOptions::Mode::Navigate);
-        if (auto session = m_connection->networkProcess().networkSession(sessionID())) {
+        if (auto* session = m_connection->networkProcess().networkSession(sessionID())) {
             if (auto entry = session->prefetchCache().take(request.url())) {
                 if (!entry->redirectRequest.isNull()) {
                     auto maxAgeCap = validateCacheEntryForMaxAgeCapValidation(request, entry->redirectRequest, entry->response);
@@ -691,7 +691,7 @@ void NetworkResourceLoader::didFinishWithRedirectResponse(WebCore::ResourceReque
     redirectResponse.setType(ResourceResponse::Type::Opaqueredirect);
     if (!isCrossOriginPrefetch())
         didReceiveResponse(WTFMove(redirectResponse), [] (auto) { });
-    else if (auto session = m_connection->networkProcess().networkSession(sessionID()))
+    else if (auto* session = m_connection->networkProcess().networkSession(sessionID()))
         session->prefetchCache().storeRedirect(m_networkLoad->currentRequest().url(), WTFMove(redirectResponse), WTFMove(redirectRequest));
 
     WebCore::NetworkLoadMetrics networkLoadMetrics;
@@ -820,7 +820,7 @@ void NetworkResourceLoader::tryStoreAsCacheEntry()
         return;
 
     if (isCrossOriginPrefetch()) {
-        if (auto session = m_connection->networkProcess().networkSession(sessionID()))
+        if (auto* session = m_connection->networkProcess().networkSession(sessionID()))
             session->prefetchCache().store(m_networkLoad->currentRequest().url(), WTFMove(m_response), WTFMove(m_bufferedDataForCache));
         return;
     }
@@ -981,7 +981,7 @@ bool NetworkResourceLoader::shouldCaptureExtraNetworkLoadMetrics() const
 #if ENABLE(RESOURCE_LOAD_STATISTICS) && !RELEASE_LOG_DISABLED
 bool NetworkResourceLoader::shouldLogCookieInformation(NetworkConnectionToWebProcess& connection, const PAL::SessionID& sessionID)
 {
-    if (auto session = connection.networkProcess().networkSession(sessionID))
+    if (auto* session = connection.networkProcess().networkSession(sessionID))
         return session->shouldLogCookieInformation();
     return false;
 }
